[gd_scene load_steps=15 format=3 uid="uid://dtjj734qsvmsl"]

[ext_resource type="Script" path="res://Scenes/Marble.gd" id="1_n175m"]
[ext_resource type="Material" uid="uid://cjhs7nleytnr5" path="res://Resources/Rock.tres" id="2_ejgyi"]
[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/ThirdPersonCamera.gd" id="3_hnaqc"]
[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/CameraShakePreset.gd" id="4_o67nf"]
[ext_resource type="Resource" uid="uid://ob07ddjc03yl" path="res://Resources/ControllerAttributes.tres" id="4_qfj3o"]
[ext_resource type="Resource" uid="uid://8wq0le7mywh4" path="res://addons/third-person-camera/third_person_camera/camera-shake-presets/DefaultCameraShakePreset.tres" id="5_5eq57"]
[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/CameraShake.gd" id="6_rb5d8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vd4jx"]
bounce = 1.0
absorbent = true

[sub_resource type="SphereShape3D" id="SphereShape3D_816iv"]

[sub_resource type="SphereMesh" id="SphereMesh_4es1v"]
material = ExtResource("2_ejgyi")
radial_segments = 128
rings = 64

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_84uqy"]
margin = 1.135

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2bjii"]
albedo_color = Color(0.8, 0.686275, 0.215686, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ag7lb"]
material = SubResource("StandardMaterial3D_2bjii")
radius = 0.05
height = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_ybkhn"]
top_radius = 0.0
height = 0.938

[node name="Marble" type="RigidBody3D" node_paths=PackedStringArray("tpc", "cam")]
physics_interpolation_mode = 1
physics_material_override = SubResource("PhysicsMaterial_vd4jx")
gravity_scale = 0.0
can_sleep = false
continuous_cd = true
script = ExtResource("1_n175m")
tpc = NodePath("ThirdPersonCamera")
cam = NodePath("ThirdPersonCamera/Camera")
att = ExtResource("4_qfj3o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_816iv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("SphereMesh_4es1v")

[node name="ThirdPersonCamera" type="Node3D" parent="."]
script = ExtResource("3_hnaqc")
att = ExtResource("4_qfj3o")
shake_presets = Array[ExtResource("4_o67nf")]([ExtResource("5_5eq57")])

[node name="RotationPivot" type="Node3D" parent="ThirdPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 0.956305, 0.292372, 0, -0.292372, 0.956305, 0, 0, 0)
top_level = true

[node name="OffsetPivot" type="Node3D" parent="ThirdPersonCamera/RotationPivot"]
transform = Transform3D(1, -3.9187e-07, 6.47546e-10, 3.94479e-07, 0.999986, 5.65052e-05, -2.26876e-11, -5.76377e-05, 0.999993, 0, 0, 0)

[node name="CameraSpringArm" type="SpringArm3D" parent="ThirdPersonCamera/RotationPivot/OffsetPivot"]
process_priority = 11
shape = SubResource("SeparationRayShape3D_84uqy")
spring_length = 3.0

[node name="CameraMarker" type="Marker3D" parent="ThirdPersonCamera/RotationPivot/OffsetPivot/CameraSpringArm"]
transform = Transform3D(1, 8.05551e-08, 3.50878e-07, 1.27409e-08, 1.00005, 0.000274777, 2.14425e-07, 1.07288e-06, 1.00152, -2.00885e-09, -0.00016892, 3.00002)

[node name="PivotDebug" type="MeshInstance3D" parent="ThirdPersonCamera/RotationPivot/OffsetPivot"]
visible = false
mesh = SubResource("SphereMesh_ag7lb")

[node name="CameraShaker" type="Node3D" parent="ThirdPersonCamera" node_paths=PackedStringArray("camera")]
script = ExtResource("6_rb5d8")
camera = NodePath("../Camera")

[node name="Camera" type="Camera3D" parent="ThirdPersonCamera"]
transform = Transform3D(1, -9.64698e-16, 3.15539e-15, 0, 0.956305, 0.292372, -3.29956e-15, -0.292372, 0.956305, 9.46511e-15, 0.878063, 2.8686)
top_level = true

[node name="CameraDebug" type="MeshInstance3D" parent="ThirdPersonCamera/Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.570638)
visible = false
mesh = SubResource("CylinderMesh_ybkhn")

[node name="SpotLightOffset" type="Node3D" parent="."]
top_level = true

[node name="SpotLight" type="SpotLight3D" parent="SpotLightOffset"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50, 0)
light_energy = 1000.0
light_specular = 0.3
shadow_enabled = true
distance_fade_begin = 5.0
distance_fade_length = 20.0
spot_range = 125.0
spot_attenuation = 2.0
spot_angle = 10.0
spot_angle_attenuation = 0.75

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../SpotLightOffset")
update_rotation = false
update_scale = false

[node name="RayCast3D" type="RayCast3D" parent="."]
debug_shape_custom_color = Color(0.726242, 0.000659006, 0.774988, 1)
debug_shape_thickness = 5
